--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "visualizevideo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://danielrichardoconnell.com/video_visualizer",
+  "homepage": "./",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
